--- a/src/app/pages/custom-page/custom-page.html
+++ b/src/app/pages/custom-page/custom-page.html
@@ -1,1 +1,89 @@
-<p>custom-page works!</p>
+<section class="mx-5">
+  <h1 class="text-2xl font-bold">Pipes Personalizados</h1>
+  <h3 class="text-xl font-thin">Pipes no incluidos en angular</h3>
+</section>
+
+<div class="stats shadow">
+  <div class="stat">
+    <div class="stat-title">ToggleCase Pipe</div>
+    <div class="stat-value">{{ name() | toggleCase : uppercase() }}</div>
+    <div class="stat-desc">{{ name() }}</div>
+
+    <button class="btn btn-primary w-28 my-4" (click)="toggleCase()">
+      ToggleCase
+    </button>
+  </div>
+</div>
+
+<div class="divider my-4"></div>
+
+<section class="my-4">
+  <h1 class="text-2xl font-bold">
+    Filtrando por: {{ searchQuery() }} {{ sortBy() ? "ordenando por: " : "" }}
+    {{ sortBy() }}
+  </h1>
+
+  <input
+    type="text"
+    class="input input-bordered w-full justify-end my-2"
+    placeholder="Buscar heroe"
+    (input)="searchQuery.set(txtSearch.value)"
+    #txtSearch
+  />
+
+  <div class="flex gap-2 justify-end w-full">
+    <button class="btn btn-primary" (click)="sortBy.set('name')">
+      Por nombre
+    </button>
+    <button class="btn btn-accent" (click)="sortBy.set('canFly')">
+      Por volar
+    </button>
+    <button class="btn btn-secondary" (click)="sortBy.set('color')">
+      Por color
+    </button>
+    <button class="btn btn-info" (click)="sortBy.set('creator')">
+      Por creador
+    </button>
+  </div>
+</section>
+
+<section class="overflow-x-auto w-full">
+  <table class="table table-xs w-full">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Nombre</th>
+        <th>Puede volar</th>
+        <th>Color</th>
+        <th>Creador</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (hero of heroes() | heroSortBy: sortBy() | heroFilter: searchQuery();
+      track hero.id; let idx = $index) {
+      <tr>
+        <td>{{ idx }}</td>
+        <td>{{ hero.name }}</td>
+        <td>
+          <span
+            class="text-xs w-44"
+            [class.text-success]="hero.canFly"
+            [class.text-accent]="!hero.canFly"
+          >
+            {{ hero.canFly | canFly }}
+          </span>
+        </td>
+        <td [style.color]="hero.color | heroTextColor">
+          {{ hero.color | heroColor }}
+        </td>
+        <td
+          [class.text-primary]="hero.creator === 0"
+          [class.text-accent]="hero.creator === 1"
+        >
+          {{ hero.creator | heroCreator }}
+        </td>
+      </tr>
+      }
+    </tbody>
+  </table>
+</section>
